Fix timeline vertical position issue on mobile

--- a/scss/sections/_timeline.scss
+++ b/scss/sections/_timeline.scss
@@ -103,6 +103,7 @@
 			left: 0;
 			.episode-parent {
 				position: relative;
+				top: initial;
 				width: 100%;
 				overflow-x: scroll;
 				overflow-y: hidden;
@@ -128,11 +129,11 @@
 		}
 	}
 	.episode-parent > svg {
+		position: relative;
 		height: 280px;
 		width: auto;
 		margin: 0;
 		padding-left: 30px;
-		position: relative;
 	}
 	.illumination-container {
 	}
